manifests/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: database
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: admin
        - name: MYSQL_DATABASE
          value: dolibarr
        image: mariadb:10.6
        name: database
        resources: {}
#        volumeMounts:
#        - mountPath: /var/lib/mysql
#          name: mariadb-data
      restartPolicy: Always
#      volumes:
#        - name: mariadb-data
#          persistentVolumeClaim:
#            claimName: mariadb-data
status: {}
