manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
      - image: "pmnk8scr.azurecr.io/pmnk8s"
        name: web
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html/htdocs/conf
          name: dolibarr-data
        - mountPath: /var/www/html/documents
          name: dolibarr-documents
      restartPolicy: Always
      volumes:
        - name: dolibarr-data
          persistentVolumeClaim:
            claimName: dolibarr-data
        - name: dolibarr-documents
          persistentVolumeClaim:
            claimName: dolibarr-documents
status: {}
