manifests/service.database.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    io.kompose.service: database
  type: NodePort
status:
  loadBalancer: {}
